fix en translation, item style on mobile view

--- a/src/app/components/item/item.component.scss
+++ b/src/app/components/item/item.component.scss
@@ -96,8 +96,8 @@ article:hover {
             margin-right: 8px;
         }
 
-        .sellButton {
-            margin-bottom: 5px !important;
+        .openButton {
+            margin-top: 5px !important;
         }
 
         .price {
